<resources>
    <string name="app_name">Jolali Notes</string>
    <string name="icon_name">JN</string>
    <string name="login">Login</string>
    <string name="have_not_account_register">Haven\'t an account? <u>Register</u></string>
    <string name="have_not_account">Haven\'t an account?</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_hint">Enter your email address</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_hint">Enter your full name</string>
    <string name="re_password">Re-password</string>
    <string name="re_password_hint">Re-enter your password</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="member_since">Member Since</string>
    <string name="last_login">Last Login</string>
    <string name="my_notes">My Notes</string>
    <string name="my_profile">My Profile</string>
    <string name="new_note">New Note</string>
    <string name="update_note">Update Note</string>
    <string name="empty_email_error">Email is required</string>
    <string name="empty_password_error">Password is required</string>
    <string name="empty_name_error">Name is required</string>
    <string name="invalid_email_error">Invalid Email</string>
    <string name="invalid_password_error">Invalid Password</string>
    <string name="invalid_name_error">Invalid Name</string>
    <string name="password_not_match_error">Password not match</string>
    <string name="note_deleted">Note has been deleted</string>
    <string name="note_updated">Note has been updated</string>
    <string name="note_saved">Note has been saved</string>
    <string name="startapp_app_id" translatable="false">208394595</string>
</resources>